<resources>
    <string name="app_name">INSTINKT</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="calc_dist">Calcul distance</string>
    <string name="ed_vibration">Vibration : </string>
    <string name="b_vibration">Vibration </string>
    <string name="n_a">N/A</string>
    <string name="ed_attenuation">Attenuation db :</string>
    <string name="ed_xxxx">xxxx :</string>
</resources>
